crates/aven-check/tests/fixtures/check/valid/or-pattern-payload-binders.av
source : @{@Ok(Int), @Err(Int)} = @Ok(1)
result : Int = source ?>
  @Ok(item) | @Err(item) => item
