crates/aven-check/tests/fixtures/check/invalid/incompatible-match-arms.av
source : @{"text", "int"} = runtime
result = source ?>
  "text" => "hello"
  "int" => 42
runtime = _
